<resources>
    <string name="app_name">Quality Printer</string>
    <string name="pixelNumber">Pixel Number</string>
    <string name="analysis">Analysis</string>
    <string name="subtraction">Subtraction</string>
    <string name="colorhint">Enter the PLA Color</string>
    <string name="xmin">x min</string>
    <string name="xmax">x max</string>
    <string name="ymin">y min</string>
    <string name="ymax">y max</string>
    <string name="set_x">Set X Values</string>
    <string name="set_y">Set Y Values</string>
    <string name="setup">Setup Analysis</string>
    <string name="icon_text">Click an Image to Select it</string>
    <string name="view_image">View Full Image</string>
    <string name="title">QUALITY</string>
    <string name="username">Enter Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create an Account</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPassword">Enter a Password</string>
    <string name="reenter">Re-enter Password</string>
    <string name="parse_app_id">OGgfMc5oniUrtTH8bmxfI7NhCxb4akmBseHKWI3m</string>
    <string name="parse_client_id">F5QSRuhNYJ9qpiBsVvUOFJbNX2v0TJf0xeF9SCDA</string>
    <string name="enterPhoneNumber">Enter Phone Number*</string>
    <string name="optional">*optional - used to update you on status of print</string>
    <string name="logout">Logout</string>
</resources>
