<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/click_to_hide1">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="#000000"
        android:textSize="25dp"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="0px" android:layout_height="0px"/>
    <EditText
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/register_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/create_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"/>
    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/reenter_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reenter"
        android:inputType="textPassword"/>
    <EditText
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number"
        android:hint="@string/enterPhoneNumber"
        android:inputType="phone"/>
    <TextView
        android:textColor="#000000"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/optional"/>
    <Button
        android:id="@+id/register"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

</LinearLayout>